# ompl_2d_rviz_visualizer

./: CMakeLists.txt  LICENSE  README.md  nodelet_plugins.xml  package.xml  plugin_description.xml
.github/workflows/: ci_focal.yml  clang_format.yml
config/: visualizer.rviz
include/ompl_2d_rviz_visualizer/: rviz_renderer.h
launch/: visualizer.launch
ompl_2d_rviz_visualizer/: CMakeLists.txt  package.xml
ompl_2d_rviz_visualizer_msgs/: CMakeLists.txt  package.xml
ompl_2d_rviz_visualizer_msgs/msg/: ClearRequest.msg  PlanRequest.msg
ompl_2d_rviz_visualizer_msgs/srv/: MapBounds.srv  Plan.srv  Reset.srv  State.srv
ompl_2d_rviz_visualizer_ros/: CMakeLists.txt  nodelet_plugins.xml  package.xml  plugin_description.xml
ompl_2d_rviz_visualizer_ros/config/: planner_params.yaml  visualizer.rviz
ompl_2d_rviz_visualizer_ros/config/rviz/: visualizer.rviz
ompl_2d_rviz_visualizer_ros/include/ompl_2d_rviz_visualizer_ros/: collision_checker.h  map_loader.h  map_utils.h  rviz_renderer.h
ompl_2d_rviz_visualizer_ros/launch/: visualizer.launch
ompl_2d_rviz_visualizer_ros/map/: map.yaml
ompl_2d_rviz_visualizer_ros/map/empty_map/: empty_map.pgm  empty_map.yaml
ompl_2d_rviz_visualizer_ros/map/map_with_many_homotopy_classes/: map_with_many_homotopy_classes.pgm  map_with_many_homotopy_classes.yaml
ompl_2d_rviz_visualizer_ros/map/map_with_single_cube/: map_with_single_cube.pgm  map_with_single_cube.yaml
ompl_2d_rviz_visualizer_ros/map/map_with_single_narrow_passage_gap/: map_with_single_narrow_passage_gap.pgm  map_with_single_narrow_passage_gap.yaml
ompl_2d_rviz_visualizer_ros/src/: map_loader.cpp  rviz_control_panel.cpp  rviz_control_panel.h  rviz_renderer.cpp  visualizer_nodelet.cpp
src/: rviz_control_panel.cpp  rviz_control_panel.h  rviz_renderer.cpp  visualizer_nodelet.cpp
